# sprint-dash

./: .csc  .dockerignore  .env.example  .gitignore  .tmux-session  .trivyignore  CLAUDE.md  DESIGN.md  Dockerfile  LICENSE  README.md  justfile  pyproject.toml
.woodpecker/: build.yml  ci.yml  deploy.yml  publish-cli.yml
app/: __init__.py  api.py  api_v1.py  cli.py  database.py  gitea.py  health.py  http_client.py  main.py  migrate.py  sprint_store.py  woodpecker.py
templates/: backlog.html  base.html  board.html  epics.html  home.html  issue_detail.html  repo_picker.html  search.html  sprint_detail.html  sprints.html
templates/partials/: backlog_issue_row.html  backlog_list.html  board_card.html  board_column.html  board_content.html  burndown_chart.html  close_sprint_confirm.html  epics_content.html  error.html  home_content.html  issue_detail.html  issue_list.html  sprint_create_form.html  sprint_detail.html  sprint_edit_form.html  sprint_list.html
tests/: test_api_v1.py  test_cli.py  test_database.py  test_http_client.py  test_sprint_store.py  test_woodpecker.py
