[tool.poetry]
name = "sprint-dash"
version = "0.1.0"
description = "Lightweight sprint dashboard for Gitea"
authors = ["singlis"]
packages = [{include = "app"}]

[tool.poetry.scripts]
sd-cli = "app.cli:main"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
httpx = "^0.26.0"
jinja2 = "^3.1.0"
python-dotenv = "^1.0.0"
cachetools = "^5.0.0"
pyyaml = "^6.0.0"

[tool.poetry.group.dev.dependencies]
# Testing
pytest = "^8.0.0"
pytest-cov = "^4.1.0"
pytest-asyncio = "^0.21.0"

# Linting and formatting
ruff = "^0.1.0"
mypy = "^1.5.0"
types-pyyaml = "^6.0.12.20250915"
types-cachetools = "^6.2.0.20251022"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# --- Tool Configurations ---

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort (import sorting)
    "B",   # flake8-bugbear (common bugs)
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade (modern Python)
    "SIM", # flake8-simplify
]
ignore = [
    "E501",  # line too long (formatter handles this)
]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
check_untyped_defs = true
ignore_missing_imports = true
show_error_codes = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["app"]
omit = ["*/tests/*"]

[tool.coverage.report]
precision = 2
show_missing = true
